# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
assets/models/: cube.glb  viking_room.glb
build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ShaderCompileTarget.vcxproj  ShaderCompileTarget.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vulkanRenderer.sln  vulkanRenderer.vcxproj  vulkanRenderer.vcxproj.filters
build_x64/compiled_shaders/: filtercube.spv  genbrdflut.spv  imgui.spv  irradiancecube.spv  shader.spv  skybox.spv  slang.spv
build_x64/vulkanRenderer.dir/Debug/: .d.json  imgui.cpp.module.json  imgui_demo.cpp.module.json  imgui_draw.cpp.module.json  imgui_widgets.cpp.module.json  main.cpp.module.json  mesh.cpp.module.json  renderer_core.cpp.module.json  renderer_instanced.cpp.module.json  renderer_pbr.cpp.module.json  renderer_pipeline.cpp.module.json  renderer_rendering.cpp.module.json  renderer_resouces.cpp.module.json  renderer_utils.cpp.module.json  vulkanRenderer.exe.recipe
build_x64/vulkanRenderer.dir/Debug/vulkanRenderer.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/vulkanRenderer.dir/Debug/vulkanRenderer_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
build_x64/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_x64/x64/Debug/ShaderCompileTarget/: ShaderCompileTarget.recipe
build_x64/x64/Debug/ShaderCompileTarget/ShaderCo.22705D02.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_x64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_x64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
cmake/: shader.cmake
doc/BasicRender/: README.md  README.zh-CN.md
doc/Culling/: README.md  README.zh-CN.md
doc/ECS/: README.md  README.zh-CN.md
doc/Instanced/: README.md  README.zh-CN.md
doc/PBR/: README.md  README.zh-CN.md
doc/SSR/: README.md  README.zh-CN.md
doc/Shadow/: README.md  README.zh-CN.md
doc/TAAU/: README.md  README.zh-CN.md
doc/UI/: README.zh-CN.md
shaders/: culling_comp.slang  culling_comp.spv  culling_depth.slang  culling_depth.spv  culling_draw.slang  culling_draw.spv  culling_hiz_build.slang  culling_hiz_build.spv  filtercube.slang  genbrdflut.slang  imgui.slang  instanced.slang  instanced.spv  irradiancecube.slang  pbr.slang  pbr.spv  pbribl.cpp  pbribl.slang  pbribl.spv  prefilterenvmap.slang  prefilterenvmap.spv  shader.slang  shadow_depth.slang  shadow_depth.spv  shadow_lit.slang  shadow_lit.spv  shadow_lit_ssr.slang  shadow_lit_ssr.spv  shadow_lit_taau.slang  shadow_lit_taau.spv  skybox.slang  slang.slang  ssr.slang  ssr.spv  taau_resolve.slang  taau_resolve.spv
shaders/tmp/: filtercube.txxt  genbrdflut.txt
src/Core/: Application.h  Camera.h  Mesh.cpp  Mesh.h  Platform.h  RenderConfig.h  Renderer.h  Renderer_Culling.cpp  Renderer_Pipeline.cpp  Renderer_Resouces.cpp  Renderer_SSR.cpp  Renderer_Shadow.cpp  Renderer_TAAU.cpp  Renderer_UI.cpp  Renderer_core.cpp  Renderer_instanced.cpp  Renderer_pbr.cpp  Renderer_rendering.cpp  Renderer_utils.cpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Texture.h  main.cpp
